k8s/network-policies/network-test-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-test-trial
  namespace: hardened

spec:
  serviceAccountName: network-test-sa
  restartPolicy: Never

  securityContext:
    runAsNonRoot: true
    runAsUser: 1000

  containers:
    - name: tester
      image: curlimages/curl:8.8.0

      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true

      resources:
        requests:
          cpu: 50m
          memory: 64Mi

        limits:
          cpu: 100m
          memory: 128Mi
